<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cat_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CatDetailActivity">


    <ImageView
        android:id="@+id/catDetail_image"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/catDetail_breedName"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sample"
        android:textColor="@color/goldish"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catDetail_image" />

    <TextView
        android:id="@+id/catDetail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/sample"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catDetail_temperamentText" />

    <ImageButton
        android:id="@+id/catDetail_FavouriteBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/catDetail_breedName"
        app:layout_constraintTop_toBottomOf="@+id/catDetail_image"
        app:srcCompat="@drawable/ic_favorite_border_red" />

    <TextView
        android:id="@+id/origin_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Origin_lb"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catDetail_breedName" />

    <TextView
        android:id="@+id/catDetail_originText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/sample"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/origin_lb"
        app:layout_constraintTop_toBottomOf="@+id/catDetail_breedName" />

    <TextView
        android:id="@+id/lifespan_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Life_span_lb"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/origin_lb" />

    <TextView
        android:id="@+id/catDetail_lifeSpanText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/sample"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lifespan_lb"
        app:layout_constraintTop_toBottomOf="@+id/catDetail_originText" />

    <TextView
        android:id="@+id/temperament_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Temperament_lb"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dogFriend_lb" />

    <TextView
        android:id="@+id/catDetail_temperamentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/sample"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/temperament_lb"
        app:layout_constraintTop_toBottomOf="@+id/dogFriend_lb" />

    <TextView
        android:id="@+id/dogFriend_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Dog_friend_lb"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifespan_lb" />

    <TextView
        android:id="@+id/catDetail_dogLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/sample"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/dogFriend_lb"
        app:layout_constraintTop_toBottomOf="@+id/catDetail_lifeSpanText" />

    <TextView
        android:id="@+id/catDetail_wikiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/sample"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catDetail_description" />

    <ImageButton
        android:id="@+id/catDetail_backBtn"
        android:layout_width="37dp"
        android:layout_height="41dp"
        android:background="@color/white"
        android:onClick="setBackBtn"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_black_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>